Small fixes, fixed npm audit vulnerabilities

--- a/views/pages/links.ejs
+++ b/views/pages/links.ejs
@@ -16,7 +16,7 @@
             <a href="home_page">Home Page</a>
         </p>
         <p>
-            <a href="building?page=purvine">Purvine Hall</a>
+            <a href="building?page=Purvine">Purvine Hall</a>
         </p>
         <p>
             <a href="building_select">Building Selector</a>
